hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tapply_enum.php.rust_elab.exp
File "tapply_enum.php", line 9, characters 10-14:
Invalid return type (Typing[4110])
  File "tapply_enum.php", line 8, characters 15-17:
  Expected `Pos`
  File "tapply_enum.php", line 4, characters 17-23:
  But got `dynamic`
