hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tapply_enum.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function dyn(): dynamic { return 4; }

enum Pos: int {}

function f(): Pos {
  return dyn(); // error
}
